--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <header>
             <a href="#" class="hamburguer"><i class="fa-solid fa-bars"></i></a>
-        <nav class="hide">
-            <a href="#" class="navigation">Home</a>
-            <a href="#" class="navigation">About me</a>
-            <a href="#" class="navigation">My jobs</a>
-            <a href="#" class="navigation">Contact</a>
+        <nav>
+            <a href="#" class="navigation" id="home">Home</a>
+            <a href="#" class="navigation" id="about">About me</a>
+            <a href="#" class="navigation" id="jobs">My jobs</a>
+            <a href="#" class="navigation" id="contact">Contact</a>
         </nav>
     </header>
 
